// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSpinner customize 1`] = `
<div>
  <h3
    class="spinner-grow spinner-grow-sm text-warning bazinga"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </h3>
</div>
`;

exports[`loads and displays CSpinner component 1`] = `
<div>
  <div
    class="spinner-border"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </div>
</div>
`;
